--- a/drivers/misc/mediatek/lcm/otm9605a_hlt_qhd_dsi_vdo/Makefile
+++ b/drivers/misc/mediatek/lcm/otm9605a_hlt_qhd_dsi_vdo/Makefile
@@ -3,4 +3,4 @@
 #
 include $(srctree)/drivers/misc/mediatek/Makefile.custom
 
-obj-y += otm9605a_hlt_qhd_dsi_vdo.o
+obj-y += otm9605a_hlt_qhd_dsi_vdo otm9605a_txd_dsi_vdo.o
